objects/Account_Geography__c.object
<CustomObject>
    <description>Used to Assign Opportunity and Account on basis of Postal Code to the Partner which decides whether Opp can be assigned auto or not.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Geography</relationshipLabel>
        <relationshipName>Account_Geography</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Postal Code for Account</description>
        <label>Postal Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skip__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Geography</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Account Geography Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Geography</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>